# hotwheels.vip

./: .clang-format  CMakeLists.txt  README.md  common.h  hotwheels.cpp  hotwheels.vip.sln  hotwheels.vip.vcxproj  hotwheels.vip.vcxproj.filters
core/cfg/: config.cpp  config.h
core/gui/: gui.cpp  gui.h
core/gui/helpers/: helpers.h
core/gui/tabs/: aimbot.cpp  fonts.cpp  misc.cpp  movement.cpp  settings.cpp  visuals.cpp
core/hacks/discord-rpc/: rpc.cpp  rpc.h
core/hacks/visuals/world/: world.cpp  world.h
core/hooks/: detour_hook.h  hooks.cpp  hooks.h
core/props/: props.cpp  props.h
core/sdk/classes/: c_material.h  entity.h
core/sdk/datatypes/: c_usercmd.h  color.h  datamap.h  datatable.h  key_values.cpp  key_values.h
core/sdk/interfaces/: i_base_client_dll.h  i_client_entity_list.h  i_client_mode_shared.h  i_engine_client.h  i_global_vars_base.h  i_input.h  i_input_system.h  i_key_values_system.h  i_material_system.h  i_model_render.h  i_surface.h  interfaces.cpp  interfaces.h
core/sdk/structs/: models.hpp  studio.h
dependencies/discord/src/: connection_win.cpp
dependencies/imgui/: imgui.cpp  imgui.h  imgui_widgets.cpp
dependencies/lazy_importer/: lazy_importer.h
project/: entry.cpp  entry.hpp
project/cheat/: cheat.cpp  cheat.hpp
project/cheat/global/: globals.hpp  snakeify.hpp
project/cheat/hooks/: hooks.cpp  hooks.hpp
project/cheat/sdk/: include.hpp
project/dependencies/fmt/: args.h  chrono.h  color.h  compile.h  core.h  format-inl.h  format.h  os.h  ostream.h  printf.h  ranges.h
project/dependencies/fnv/: fnv.hpp
project/dependencies/imgui/: imconfig.h  imgui.cpp  imgui.h  imgui_draw.cpp  imgui_freetype.cpp  imgui_freetype.h  imgui_impl_dx11.cpp  imgui_impl_win32.cpp  imgui_internal.h  imgui_widgets.cpp  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
project/dependencies/kdmapper/: utils.hpp
project/dependencies/sdk/: SimpleMath.cpp  SimpleMath.h  SimpleMath.inl  class_info.cpp  class_info.h  sdk.cpp  sdk.h  type_info.cpp  type_info.h
utilities/: logging.cpp  logging.h
utilities/encryption/: crc32.cpp  crc32.h  fnv1a.h  xorstr.h
utilities/helpers/: bit_flag.h
utilities/input/: key_handler.cpp  key_handler.h
utilities/math/: matrix.h  vector.h
utilities/memory/: memory.cpp  memory.h  singleton.h
utilities/memory/helpers/: pe32.h
(+165 files in other folders)
